<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/page_mine"
        android:icon="@drawable/ic_main"
        android:title="@string/main"
        app:showAsAction="always" />
    <item
        android:id="@+id/page_planning"
        android:icon="@drawable/ic_planning"
        android:title="@string/planning"
        app:showAsAction="always" />
    <item
        android:id="@+id/page_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/categories"
        app:showAsAction="always" />
    <item
        android:id="@+id/page_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:showAsAction="always" />


</menu>